feat(20907): fix scrollbar background color

--- a/src/styles/glass-theme.css
+++ b/src/styles/glass-theme.css
@@ -14,7 +14,7 @@
       backdrop-filter: blur(10px);
 
       & * {
-        scrollbar-color: var(--scrollbar-thumb) rgba(255, 255, 255, 0.75);
+        scrollbar-color: var(--scrollbar-thumb) transparent;
       }
     }
   }
