--- a/src/styles/glass-theme.css
+++ b/src/styles/glass-theme.css
@@ -1,21 +1,19 @@
-:not(:hover) {
-  &.knt-breadcrumbs,
-  &.knt-panel-icon {
-    background-color: rgba(255, 255, 255, 0.75);
-    backdrop-filter: blur(10px);
-  }
+.knt-breadcrumbs:not(.add-spec),
+.knt-panel-icon:not(.add-spec) {
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
 }
 
 @media screen and (min-width: 961px) {
-  :not(:hover, :focus-within) {
-    &.knt-panel,
-    &.knt-search-button {
-      background-color: rgba(255, 255, 255, 0.75);
-      backdrop-filter: blur(10px);
+  .knt-panel:not(.add-spec),
+  .knt-panel-header:not(.add-spec),
+  .knt-search-button:not(.add-spec),
+  .knt-toolbar-button:not(.add-spec) {
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
 
-      & * {
-        scrollbar-color: var(--scrollbar-thumb) transparent;
-      }
+    & * {
+      scrollbar-color: var(--scrollbar-thumb) rgba(255, 255, 255, 0.5);
     }
   }
 }
