--- a/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
+++ b/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
@@ -1,5 +1,5 @@
 .breadcrumbs {
-  border-radius: var(--half-unit);
+  border-radius: var(--border-radius);
   display: inline-flex;
   flex-wrap: wrap;
   padding: var(--half-unit) var(--unit);
