--- a/src/components/Panel/styles.module.css
+++ b/src/components/Panel/styles.module.css
@@ -7,6 +7,7 @@
   max-width: 260px;
   min-width: 200px;
 }
+
 .closeBtn {
   & svg {
     color: var(--icon-base-strong);
@@ -30,7 +31,21 @@
     top: calc(50% + var(--app-header-height)); /* header offset */
     height: 100vh;
   }
+
   .headerTitle {
     max-width: unset;
+  }
+
+  .header:before {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 36px;
+    height: 4px;
+    top: calc(8px + env(safe-area-inset-top));
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 2px;
+    background-color: #cccccc;
   }
 }
