feat(20907): fix search menu/banner have wrong stack context (invisible) when in panel with backdrop-filer: blur

--- a/src/styles/glass-theme.css
+++ b/src/styles/glass-theme.css
@@ -5,7 +5,8 @@
 }
 
 @media screen and (min-width: 961px) {
-  .knt-panel:not(.add-spec) {
+  .knt-panel:not(.add-spec),
+  .knt-search-bar:not(.add-spec) {
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(16px);
     box-shadow: var(--shadow-small);
