--- a/src/features/events_list/components/EventCard/EventCard.module.css
+++ b/src/features/events_list/components/EventCard/EventCard.module.css
@@ -8,10 +8,10 @@
   width: 100%;
   transition: background-color ease-out 0.1s;
   &:hover {
-    background-color: #0516261f;
+    background-color: var(--base-weak-up);
   }
   &.active {
-    background-color: #0516260f;
+    background-color: var(--accent-weak);
     box-shadow: 0px 0px 0px 0px var(--accent-strong);
     border-left: var(--half-unit) solid var(--accent-strong);
   }
