--- a/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
+++ b/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
@@ -50,27 +50,38 @@
   }
 }
 
+/* Overrides hardcoded color in the lib */
+.backdrop {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+}
+
 /* mobile */
 @media screen and (max-width: 960px) {
-  .featuresPanel.show {
-    max-height: calc(100vh - 60px);
-  }
-  .featuresPanel.collapse {
-    display: none;
+  .featuresPanel {
+    border-radius: calc(var(--border-radius-unit) * 2);
+
+    &.collapse {
+      display: none;
+    }
   }
 
-  .panelIcon.mobile {
-    display: flex;
-    &.show {
-      transition: opacity 0.33s linear 0s;
-      visibility: visible;
-      opacity: 1;
+  .header {
+    &:before {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 36px;
+      height: 4px;
+      top: calc(8px + env(safe-area-inset-top));
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 2px;
+      background-color: #cccccc;
     }
+  }
 
-    &.hide {
-      visibility: hidden;
-      opacity: 0;
-    }
+  .headerTitle {
+    height: 31px;
   }
 }
 
