refactor(21072): update height of create mcda modal

--- a/src/features/mcda/components/MCDAForm/style.module.css
+++ b/src/features/mcda/components/MCDAForm/style.module.css
@@ -16,3 +16,10 @@
 .multiselectContainer {
   width: 450px;
 }
+
+@media screen and (max-width: 960px) {
+  .modalDialog {
+    height: 100vh;
+    height: 100dvh;
+  }
+}
