fix(20961): fix pr comments

--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -21,6 +21,7 @@
   flex-direction: column;
   background-color: var(--plan-bg-color);
   overflow-wrap: break-word;
+  text-wrap: balance;
 
   &:hover {
     box-shadow: var(--shadow-medium);
