fix(21325): improve cookie banner mobile styles

--- a/src/features/cookie_consent_banner/components/CookieConsentBanner.module.css
+++ b/src/features/cookie_consent_banner/components/CookieConsentBanner.module.css
@@ -14,10 +14,19 @@
 
 .body {
   margin-bottom: var(--double-unit);
+  margin-top: var(--unit);
 }
 
 .buttonsRow {
   margin-top: var(--unit);
   display: flex;
+  flex-wrap: wrap;
   gap: var(--double-unit);
+}
+
+@media screen and (max-width: 960px) {
+  .cookieBanner {
+    padding: 25px;
+    left: var(--unit);
+  }
 }
