--- a/src/features/multivariate_layer/components/MultivariateAnalysisForm/style.module.css
+++ b/src/features/multivariate_layer/components/MultivariateAnalysisForm/style.module.css
@@ -5,7 +5,6 @@
   width: 650px;
   align-items: flex-start;
   padding: 2px;
-  overflow: auto;
 }
 
 .buttonsRow {
@@ -25,6 +24,8 @@
 
 .dimension {
   padding: var(--double--unit) var(--unit);
+  max-height: 50vh;
+  overflow-y: auto;
 }
 
 .dimensionName {
@@ -50,12 +51,16 @@
   .analysisForm {
     display: flex;
     width: 100%;
-    min-height: 40svh;
     max-height: 70svh;
     overflow-y: scroll;
   }
 
   .multiselectContainer {
     width: 100%;
+  }
+
+  .dimension {
+    height: auto;
+    overflow-y: visible;
   }
 }
