fix: wider layer items in dialog

--- a/src/features/multivariate_layer/components/MultivariateAnalysisForm/style.module.css
+++ b/src/features/multivariate_layer/components/MultivariateAnalysisForm/style.module.css
@@ -26,6 +26,7 @@
   .analysisForm {
     display: flex;
     width: 100%;
+    min-height: 50svh;
     max-height: 70svh;
     overflow-y: scroll;
   }
