fix circular deps

--- a/src/features/events_list/components/EventListSettingsRow/EventListSettingsRow.module.css
+++ b/src/features/events_list/components/EventListSettingsRow/EventListSettingsRow.module.css
@@ -1,8 +1,8 @@
 .eventListSettingsRow:not(:empty) {
-  padding: var(--double-unit);
+  padding: 0 var(--double-unit) var(--unit);
   border-bottom: 1px solid var(--faint-weak);
   gap: var(--unit);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
 }
