--- a/src/features/events_list/components/FeedSelector/FeedSelector.module.css
+++ b/src/features/events_list/components/FeedSelector/FeedSelector.module.css
@@ -6,7 +6,7 @@
 
   & .feedsSelect {
     border: none;
-    padding-right: var(--unit);
+    /* padding-right: var(--unit); */
     background-color: transparent;
   }
 }
