feat(20921): updated layout

--- a/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
+++ b/src/features/breadcrumbs/components/Breadcrumbs/Breadcrumbs.module.css
@@ -14,3 +14,8 @@
   /* negative margin used to compensate for breadcrumbs' margin */
   margin: calc(-1 * var(--half-unit));
 }
+
+.presentationMode {
+  zoom: 1.4;
+  padding: calc(1.4 * var(--half-unit)) calc(1.4 * var(--unit));
+}
