--- a/src/features/presentation_mode/LayersCoopyrights/LayersCopyrights.module.css
+++ b/src/features/presentation_mode/LayersCoopyrights/LayersCopyrights.module.css
@@ -3,16 +3,29 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+
+  max-height: 100%;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
 }
 
 .strokeText {
   position: relative;
   z-index: 2;
+
+  display: -webkit-box;
+  width: 100%;
+  max-height: 100%;
 }
 
 .strokeText::before {
   position: absolute;
   width: 100%;
+  height: 100%;
 
   content: attr(data-text);
   z-index: -1;
