--- a/src/views/Map/Layouts/Presentation/Presentation.module.css
+++ b/src/views/Map/Layouts/Presentation/Presentation.module.css
@@ -1,43 +1,53 @@
-.contentWrap {
+.container {
   display: grid;
+  grid-template-columns: 1fr 1fr 385px;
+  grid-template-rows: auto 1fr auto;
   height: 100%;
-  gap: var(--unit);
   padding: var(--double-unit);
-
-  /* analytics+layers column, map column, layers&legends column */
-  grid-template-columns:
-    fit-content(400px) minmax(440px, 10fr)
-    fit-content(400px);
-  grid-template-rows: calc(100% - 40px - var(--unit)) 40px var(--unit);
+  gap: var(--unit);
+  box-sizing: border-box;
 }
 
-.analytics {
-  grid-column: 1;
-  grid-row: 1/3;
-}
-
-.mapWrap {
-  display: flex;
-  flex-flow: column nowrap;
-  grid-column: 2;
-  grid-row: 1/2;
-}
-
-.mapSpaceBlank {
-  flex: 1;
-}
-
-.mapSpaceBottom,
-.mapSpaceTop {
+.headerRow {
+  grid-column: 1 / span 2;
+  grid-row: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: var(--unit);
+  gap: calc(var(--unit) / 2);
 }
 
-.footerWrap {
+.breadcrumbs {
   width: 100%;
-  height: calc(100% - var(--unit));
-  grid-row: 2;
-  grid-column: 1/-1;
+}
+
+.title {
+  width: 50%;
+}
+
+.sidePanel {
+  grid-column: 3;
+  grid-row: 1 / span 2;
+  min-width: 385px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  row-gap: var(--unit);
+}
+
+.copyrights {
+  grid-column: 1 / span 2;
+  grid-row: 2 / span 2;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  pointer-events: none;
+}
+
+.scaleAndLogo {
+  grid-column: 3;
+  grid-row: 3;
+  align-self: end;
+  justify-self: end;
+  pointer-events: auto;
+  font-size: 12px;
 }
