--- a/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
+++ b/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
@@ -39,15 +39,19 @@
   margin-inline-start: var(--unit);
 }
 
-.legendContainer {
+.legendSection {
   width: 100%;
 }
 
-.legend {
+.legendContainer {
   width: 100%;
-  margin-inline-start: 20px;
   display: flex;
   justify-content: center;
+}
+
+.legendPreview {
+  width: 35%;
+  margin-top: var(--double-unit);
 }
 
 @media screen and (max-width: 960px) {
@@ -68,5 +72,9 @@
 
   .addLayersButton {
     margin: var(--unit) 0;
+  }
+
+  .legendPreview {
+    width: 90%;
   }
 }
