feat: add basic check for NaN values in custom steps

--- a/src/features/multivariate_layer/components/CustomStepsInput/CustomStepsInput.module.css
+++ b/src/features/multivariate_layer/components/CustomStepsInput/CustomStepsInput.module.css
@@ -7,9 +7,13 @@
 }
 
 .customStepsRowName {
-  width: 45px;
+  width: 65px;
 }
 
 .customStepInput {
   width: 100px;
+}
+
+.error {
+  color: var(--error-strong);
 }
