feat(21382): remove trial button

--- a/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
+++ b/src/features/subscriptions/components/PaymentPlanCard/PaymentPlanCard.module.css
@@ -127,6 +127,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+
+  &:empty {
+    margin: 0;
+  }
 }
 
 .subscribeButtonsWrapper {
