--- a/src/components/Uni/__mocks__/fixture.module.css
+++ b/src/components/Uni/__mocks__/fixture.module.css
@@ -6,18 +6,18 @@
 
 .card {
   box-sizing: content-box;
-  /* padding: 8px; */
+  padding: 8px;
   box-shadow: 0 1px 6px 2px rgba(0, 0, 0, 0.12);
   & dl {
     margin: 0;
     display: grid;
     grid-template-columns: 20px 1fr;
     & dt {
-      font-size: 0.9em;
+      font-size: 12px;
     }
     & dd {
-      /* outline: 1px #eee solid; */
-      background-color: #eee;
+      outline: 1px #eee solid;
+      background-color: #f8f8f8;
       box-sizing: border-box;
       padding: 2px 4px;
     }
