fix: error margin

--- a/src/features/multivariate_layer/components/CustomStepsInput/CustomStepsInput.module.css
+++ b/src/features/multivariate_layer/components/CustomStepsInput/CustomStepsInput.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-flow: row wrap;
   gap: var(--unit);
-  margin-top: var(--unit);
+  margin: var(--unit) 0;
 }
 
 .customStepsRowName {
