feat(Multivariate dialog): 21214 simplified multivariate analysis dialog (#1018)
* feat(21214): Show static Multivariate Analysis dialog

* feat(MVA): basic Analysis creation (all layers go to Score)

* feat: delete and edit MCDA layer functionality (Score)

* fix: improve score on desktop

* feat: add Download button for Multivariate analysis layers

* fix: fix circular dependency

* feat: add and refactor editing and deleted layers; add changing the dimension

* fix: fix dimension dropdown; rename "base" to "compare"

* fix: wider layer items in dialog

* feat: add Edit button to Layers panel. Implement proper editing in MultivariateAnalysisForm

* chore: don't include empty base dimension in custom config

* fix: fix no key warning

* chore: rename type

* chore: refactor some parameters in MultivariateDimensionsLayers

* refactor: rename MultivariateAnalysisForm files

* refactor: add constraints on dimensionKey in MultivariateAnalysisForm

* feat: change default bivariate color scheme for Multivariate layers

* fix: fix dimension dropdown being cut on the border

* fix: fix showing Base instead of Compare in layer editor

* chore: update labels on bivariate legend

* fix: fix scroll in multivariate dialog

* fix: use better bivariate colors

* feat: don't override colors in Edit mode by default

* feat: add "Keep Colors" checkbox

* fix: fix logic of "Keep colors" checkbox

* chore: self-closing tag for checkbox

* fix: revert

* feat: name MCDAs in custom after their content if they only have one layer

* feat: apply axis steps for MCDA dimensions with single layer

* feat: add Multivariate Legend preview

* feat: add support for custom step overrides

* chore: change delete button icon

* feat: move Delete button inside MCDALayerParameters

* fix: hide 0 in place of custom steps checkbox

* fix showing delete button

* feat: make analysis name optional

* fix: scroll back to bottom of the dialog after enabling custom steps

* fix: better align add layers butt

--- a/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
+++ b/src/features/mcda/components/MCDALayerEditor/MCDALayerParameters/MCDALayerParameters.module.css
@@ -30,6 +30,8 @@
 .layerButtons {
   display: flex;
   flex-flow: row nowrap;
+  gap: var(--unit);
+  padding-inline-start: var(--unit);
 }
 
 .infoButton {
@@ -90,8 +92,7 @@
   font-size: 11px;
 }
 
-.editButton {
-  margin-inline-end: var(--unit);
+.actionButton {
   cursor: pointer;
   align-items: flex-start;
 }
