feat: support static opacity and MCDA opacity

--- a/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
+++ b/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
@@ -45,8 +45,13 @@
   margin-inline-start: var(--unit);
 }
 
+.staticOpacity {
+  width: 100px;
+}
+
 .legendSection {
   width: 100%;
+  margin-top: var(--double-unit);
 }
 
 .legendContainer {
