--- a/src/features/toasts/components/ToastGroup/ToastGroup.module.css
+++ b/src/features/toasts/components/ToastGroup/ToastGroup.module.css
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, 0);
   text-align: center;
-  transition: 0.8;
+  transition: all 0.8s;
   z-index: 100;
 }
 
