--- a/src/components/BivariateLegend/CornerTooltipWrapper.module.css
+++ b/src/components/BivariateLegend/CornerTooltipWrapper.module.css
@@ -29,3 +29,57 @@
 .indicator {
   width: 29px;
 }
+
+.tooltipContent {
+  font-family: var(--font-family);
+  font-style: normal;
+  font-weight: normal;
+  background: var(--back-faint-weak-down);
+  color: var(--base-weak);
+  pointer-events: all;
+  max-width: 268px;
+  z-index: var(--tooltip);
+}
+
+.bigger {
+  font-size: 14px;
+  padding: 8px 12px;
+  border-radius: 4px;
+}
+
+.default {
+  font-size: 12px;
+  padding: 4px 8px;
+  border-radius: 2px;
+}
+
+.arrow {
+  fill: currentColor;
+  color: var(--back-faint-weak-down);
+}
+
+/* Mobile breakpoint */
+@media (max-width: 960px) {
+  .tooltipContent {
+    top: unset !important;
+    left: 0 !important;
+    right: 0 !important;
+    position: absolute;
+    display: flex;
+    bottom: calc(0px + var(--half-unit));
+    width: 100%;
+    padding: var(--double-unit);
+    max-height: 90%;
+    max-width: 100%;
+    background-color: var(--base-weak);
+    color: var(--base-strong);
+    font-weight: 400;
+    font-size: 16px;
+    border-radius: var(--unit) var(--unit) 0 0;
+    box-sizing: border-box;
+  }
+
+  .arrow {
+    display: none;
+  }
+}
