feat(20921): small fixes

--- a/src/styles/presentation-mode.css
+++ b/src/styles/presentation-mode.css
@@ -4,7 +4,7 @@
     padding: calc(1.4 * var(--half-unit)) calc(1.4 * var(--unit));
   }
 
-  & .knt-current-event button,
+  & .knt-current-event > div,
   & .knt-legends-panel {
     padding: 12px;
     zoom: 1.4;
