feat(21323): pr fixes

--- a/src/styles/presentation-mode.css
+++ b/src/styles/presentation-mode.css
@@ -11,4 +11,9 @@
     padding: 12px;
     zoom: var(--presentation-scale);
   }
+
+  & .knt-map-title .knt-app-icon {
+    width: 40px;
+    padding-bottom: 40px;
+  }
 }
