--- a/src/components/Overlays/Overlays.module.css
+++ b/src/components/Overlays/Overlays.module.css
@@ -37,7 +37,7 @@
   color: var(--base-strong);
   box-shadow: var(--shadow-large);
   font: var(--font-xs);
-  padding: var(--unit) 3px var(--unit) var(--double-unit);
+  padding: var(--unit) 3px var(--unit) var(--unit);
   border-radius: var(--border-radius);
   box-sizing: border-box;
   min-width: 268px;
@@ -57,11 +57,6 @@
   position: absolute;
   top: 0;
   right: 0;
-  color: var(--faint-strong-up);
-  background-color: var(--base-weak);
-  font-size: 16px;
-  font-weight: lighter;
-  line-height: 16px;
 }
 
 .markdown {
