--- a/src/features/create_layer/components/EditLayerPanel/EditLayerPanel.module.css
+++ b/src/features/create_layer/components/EditLayerPanel/EditLayerPanel.module.css
@@ -3,7 +3,6 @@
   position: relative;
   z-index: 1;
   margin-right: var(--unit);
-  align-self: flex-start;
   border-radius: var(--border-radius);
   max-height: calc(100vh - 140px);
 
@@ -30,7 +29,7 @@
 
 .panelBody {
   height: 100%;
-  width: 260px;
+  width: 100%;
   padding: 0 18px 18px 18px;
   overflow-y: auto;
   overflow-x: hidden;
