fix padding in multiple panel components

--- a/src/widgets/FullAndShortStatesPanelWidget/components/FullAndShortStatesPanelWidget.module.css
+++ b/src/widgets/FullAndShortStatesPanelWidget/components/FullAndShortStatesPanelWidget.module.css
@@ -9,6 +9,10 @@
   }
 }
 
+.content {
+  padding-bottom: var(--unit);
+}
+
 /* Overrides hardcoded color in the lib */
 .backdrop {
   background-color: rgba(0, 0, 0, 0.3) !important;
