feat: add maxHeight property to Extrusion dimension

--- a/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
+++ b/src/features/multivariate_layer/components/MultivariateAnalysisForm/MultivariateAnalysisForm.module.css
@@ -45,8 +45,12 @@
   margin-inline-start: var(--unit);
 }
 
-.staticOpacity {
+.shortInput {
   width: 100px;
+}
+
+.staticOpacity {
+  margin-top: var(--double-unit);
 }
 
 .legendSection {
