--- a/src/features/multivariate_layer/components/MultivariateDimensionDetails/MultivariateDimensionDetails.module.css
+++ b/src/features/multivariate_layer/components/MultivariateDimensionDetails/MultivariateDimensionDetails.module.css
@@ -1,10 +1,12 @@
 .dimension {
   padding: var(--double-unit) var(--unit);
   width: 100%;
+  border-bottom: 1px solid var(--faint-strong);
 }
 
 .dimensionName {
   font-weight: 600;
+  font-size: 16px;
 }
 
 .layerRow {
