--- a/src/core/auth/crossFrameOAuth.module.css
+++ b/src/core/auth/crossFrameOAuth.module.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Full viewport height */
-  width: 100vw; /* Full viewport width */
+  height: 100vh;
+  width: 100vw;
 }
 
 .loginButton {
