fix: refine layer features panel layouts

--- a/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
+++ b/src/features/layer_features_panel/components/LayerFeaturesPanel/LayerFeaturesPanel.module.css
@@ -114,3 +114,11 @@
 .callToAction {
   width: 100%;
 }
+
+.featureButton {
+  width: 100%;
+  background: none;
+  border: none;
+  padding: 0;
+  text-align: left;
+}
