pass className props for better styling, remove unused zoom event handlers in BivariateRenderer and ClickableFeaturesRenderer, and update CSS

--- a/src/views/Map/Map.module.css
+++ b/src/views/Map/Map.module.css
@@ -53,6 +53,16 @@
   padding: 0 var(--unit);
 }
 
+/* .mappopover-content > .mappopover-provider */
+:global(.mappopover-content) {
+  display: flex;
+  flex-direction: column;
+  gap: var(--unit);
+}
+:global(.mappopover-provider):not(:last-child) {
+  box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+}
+
 /* laptop viewport */
 @media screen and (max-width: 1530px) {
   .footer {
