fix(map): 00000 anchor map container

--- a/src/views/Map/Map.module.css
+++ b/src/views/Map/Map.module.css
@@ -14,9 +14,8 @@
 .mapWrap {
   display: flex;
   flex-flow: row nowrap;
-  height: 100%;
-  width: 100%;
   position: absolute;
+  inset: 0;
 }
 
 .Map {
