--- a/src/features/breadcrumbs/BreadcrumbsPanel.module.css
+++ b/src/features/breadcrumbs/BreadcrumbsPanel.module.css
@@ -6,6 +6,11 @@
   min-height: 40px;
 }
 
+/* Add shadow when toolbar is not displayed */
+.noToolbar {
+  box-shadow: var(--shadow-small);
+}
+
 .content {
   overflow: visible;
 }
