--- a/src/core/pages/pages.css
+++ b/src/core/pages/pages.css
@@ -168,8 +168,7 @@
 }
 
 /* Normalize AI Insights heading sizes */
-#app-pages-docid-llm_analytics .app-pages-element-markdown h1,
-#app-pages-docid-llm_analytics .app-pages-element-markdown h2 {
+#app-pages-docid-llm_analytics .app-pages-element-markdown :is(h1, h2) {
   font-size: 1.17em;
   line-height: 1.4;
 }
