--- a/src/components/Uni/Components/Badge.module.css
+++ b/src/components/Uni/Components/Badge.module.css
@@ -33,3 +33,8 @@
   color: var(--base-strong-down);
   background-color: #eceeef;
 }
+
+.faint {
+  color: var(--faint-strong);
+  background-color: var(--faint-weak);
+}
